# workspace

./: README.md
src/afius_msgs/: CMakeLists.txt  package.xml
src/afius_msgs/msg/: EgoState.msg  Object.msg  ObjectCategory.msg  ObjectList.msg  ObjectState.msg  ObjectTrajectory.msg  Polygon.msg  PolygonList.msg  PredictedObject.msg  PredictedObjectList.msg  Stop.msg  StopList.msg  Track.msg
src/prediction/: CMakeLists.txt  README.md  package.xml
src/prediction/config/: params.yaml
src/prediction/dummy/: publisher_dummy_data.cpp  subsciber_predicted_list.cpp
src/prediction/include/: model.hpp  prediction.hpp
src/prediction/launch/: startCV_launch.py  startNN_launch.py  testCV_launch.py  testNN_launch.py
src/prediction/model/: aura_model_gaus_non_para.pb  aura_model_vit.pb
src/prediction/src/: PredictionCV.cpp  PredictionNN.cpp
src/prediction/test/: TestPredictionCV.cpp
src/tracking/: CMakeLists.txt  README.md  package.xml
src/tracking/config/: params.yaml
src/tracking/include/: tracking.h
src/tracking/launch/: start_launch.py
src/tracking/src/: Tracking.cpp
src/tracking/test/: TestTracking.cpp
