cmake_minimum_required(VERSION 3.8)
project(afius_msgs)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

# find dependencies
find_package(ament_cmake REQUIRED)
find_package(rclcpp REQUIRED)
find_package(std_msgs REQUIRED)
find_package(geometry_msgs REQUIRED)
#find_package(builtin_interfaces REQUIRED)
find_package(rosidl_default_generators REQUIRED)


set(msg_files
    "msg/EgoState.msg"
    "msg/Object.msg"
    "msg/ObjectCategory.msg"
    "msg/ObjectList.msg"
    "msg/ObjectState.msg"
    "msg/ObjectTrajectory.msg"
    "msg/PredictedObject.msg"
    "msg/PredictedObjectList.msg"
    "msg/StopList.msg"
    "msg/Stop.msg"
    "msg/Track.msg"
    "msg/Polygon.msg"
    "msg/PolygonList.msg"
    )

rosidl_generate_interfaces(${PROJECT_NAME}
        ${msg_files}
        DEPENDENCIES std_msgs geometry_msgs
        )

ament_package()
