<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
<name>prediction</name>
<version>0.0.0</version>
<description>prediction cv using rclcpp</description>
<maintainer email="stefan.sass@ovgu.de">Your Name</maintainer>
<license>Apache License 2.0</license>

<buildtool_depend>ament_cmake</buildtool_depend>
<depend>rclcpp</depend>
<depend>std_msgs</depend>
<depend>afius_msgs</depend>
<exec_depend>launch</exec_depend>
<exec_depend>launch_ros</exec_depend>
<test_depend>ament_cmake_gtest</test_depend>
<export><build_type>ament_cmake</build_type>
</export>
</package>
